If we get a overflow read the data. This probably fixes #2801 and is what the FreeBSD driver does.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@34667 a95241bf-73f2-0310-859d-f6bbb57e9c96